Fixed Alignment issue

--- a/public/css/UX.css
+++ b/public/css/UX.css
@@ -99,7 +99,7 @@ button:focus {
     display: block;
     width: 500px;
     text-align: center;
-    margin-left: -250px;
+    margin-left: -200px;
 }
 
 .inline {
